--- a/portfolio v2/index.html
+++ b/portfolio v2/index.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
 
 <head>
-  <title>Marquel Williams' Resume</title>
+  <title>Marquel Williams' Portfolio</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -10,44 +10,31 @@
   <div class="main-nav">
     <ul class="nav">
       <li class="name">Marquel Williams</li>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="#">Experience</a></li>
+      <li><a href="#">Home</a></li>
+      <li><a href="resume.html">Experience</a></li>
     </ul>
   </div>
-  <header class="main-pg-header"></header>
 
-<h1 class="resume-title">Resume</h1>
-<main class="resume-header">
-  <h2>skills</h2>
-  <section>
-    <ul>
-      <li>HTML5</li>
-      <li>CSS3</li>
-      <li>JavaScript</li>
-      <li>Responsive Design</li>
-      <li>Photoshop <strong>/</strong> Illustrator <strong>/</strong> Adobe XD Skills</li>
-    </ul>
-  </section>
-  <hr>
-  <section>
-  <h2>Experience</h2>
-    <ul class="resume-experience">
-      <li class="list-job"><strong>DHL</strong>, Hampton GA - General Labourer</li>
-      <li class="sub-list">May 2018 - Feb 2019</li>
-    </ul>
-    <p class="list-disc">During this position I was responsible for retrieving and packing products meant to be <br> shipped out.</p>
-    <ul class="resume-experience">
-      <li class="list-job"><strong>AAFES</strong>, Newport News VA - General Labourer</li>
-      <li class="sub-list">Dec 2019 - Apr 2020</li>
-    </ul>
-    <p class="list-disc">My duties included but were not limited to, off/on loading trucks & packing/picking items</p>
-    <ul class="resume-experience">
-      <li class="list-job"><strong>TreeHouse Tech Degree</strong>, Newport News - Student</li>
-      <li class="sub-list">Apr 2020 - Present</li>
-    </ul>
-  </section>
-</main>
+  <header class="main-pg-header">
+    <img src="images/sushi.png" alt="Picture of my pup Sushi" class="profile-image">
+  </header>
 
+  <main class="flex">
+    <div class="card">
+      <h2>Skills</h2>
+      <p>Upon my completion of TreeHouse's Front End Development Tech Degree, I will have certified proficiency in the following</p>
+      <ul class="skills">
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>JavaScript</li>
+      </ul>
+    </div>
+    <div class="card">
+      <h2>About Me</h2>
+      <p>I am a web developer with a passion for learning new things. My favourite pastime actives are learning new ways to better my code, playing CSGO with friends, and spoiling my Shiba Inu.</p>
+    </div>
+  </main>
+  
   <footer>
     <ul>
       <li><a href="https://www.linkedin.com/in/marquel-williams-276845133/" target="_blank" class="social linkedin">LinkedIn</a></li>
